Adição do style das páginas

--- a/src/main/webapp/WEB-INF/templates/template.xhtml
+++ b/src/main/webapp/WEB-INF/templates/template.xhtml
@@ -4,8 +4,9 @@
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
 
 <h:head>
-	<title><ui:insert name="title">Título</ui:insert></title>
+<h:outputStylesheet name="style.css" library="css"/>
 </h:head>
+
 <h:body>
 	<h1>
 		<ui:insert name="header">Header</ui:insert>
